#2: fixed decorators plugin config

--- a/package.json
+++ b/package.json
@@ -116,7 +116,7 @@
       "react-app"
     ],
     "plugins": [
-      "transform-decorators-legacy"
+      ["@babel/plugin-proposal-decorators", { "legacy": true }]
     ]
   }
 }
