--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-app-polyfill": "^0.2.0",
     "react-dev-utils": "^7.0.0",
     "react-dom": "^16.7.0",
+    "react-hot-loader": "^4.6.3",
     "react-meta-tags": "^0.7.3",
     "react-router-dom": "^4.3.1",
     "react-swipeable-views": "^0.13.0",
